manifests/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: szfs-website
  name: szfs-website
  namespace: szfs
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: szfs-website
status:
  loadBalancer: {}
