manifests/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: szfs-website
  namespace: szfs
spec:
  rules:
  - host: "szfs.eu"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: szfs-website
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: szfs-website-redirect
  namespace: szfs
  annotations:
      nginx.ingress.kubernetes.io/permanent-redirect: https://szfs.eu
spec:
  rules:
  - host: "www.szfs.eu"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: szfs-website
            port:
              number: 80
